--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
                             <a href="#featured" class="nav__link">Featured</a>
                         </li>
                     </ul>
+
+                    <!-- Close Icon -->
+                    <div class="nav__close" id="nav-close">
+                        <i class="ri-close-line"></i>
+                    </div>
+                </div>
+                <!-- Toggle Button -->
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="ri-menu-line"></i>
                 </div>
             </nav>
         </header>
@@ -56,7 +65,51 @@
         <!--==================== MAIN ====================-->
         <main class="main">
             <!--==================== HOME ====================-->
-            <section class="home section" id="home"></section>
+            <section class="home section" id="home">
+                <div class="shape shape__big"></div>
+                <div class="shape shape__small"></div>
+                <div class="home__container container grid">
+                    <div class="home__data">
+                        <h1 class="home__title">Choose The Best Car</h1>
+                        <h2 class="home__subtitle">Porsche Mission E</h2>
+                        <h3 class="home__elec">
+                            <i class="ri-flashlight-fill"></i> Electric Car
+                        </h3>
+                    </div>
+
+                    <img src="./assets/img/home.png" alt="" class="home__img" />
+
+                    <div class="home__car">
+                        <!-- Car data 1 -->
+                        <div class="home__car-data">
+                            <div class="home__car-icon">
+                                <i class="ri-temp-cold-line"></i>
+                            </div>
+                            <h2 class="home__car-number">24&deg;</h2>
+                            <h3 class="home__car-name">TEMPERATURE</h3>
+                        </div>
+                        <!-- Car data 2 -->
+                        <div class="home__car-data">
+                            <div class="home__car-icon">
+                                <i class="ri-dashboard-3-line"></i>
+                            </div>
+                            <h2 class="home__car-number">873</h2>
+                            <h3 class="home__car-name">MILEAGE</h3>
+                        </div>
+                        <!-- Car data 3 -->
+                        <div class="home__car-data">
+                            <div class="home__car-icon">
+                                <i class="ri-flashlight-fill"></i>
+                            </div>
+                            <h2 class="home__car-number">94%</h2>
+                            <h3 class="home__car-name">BATTERY</h3>
+                        </div>
+                        <!-- Car data ends -->
+                    </div>
+
+                    <a href="#" class="home__button">START</a>
+                </div>
+            </section>
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about"></section>
@@ -96,4 +149,4 @@
     </body>
 </html>
 
-<!-- 11:44 -->
+<!-- 20:40 -->
