--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
                         </h3>
                     </div>
 
-                    <img src="./assets/img/home.png" alt="" class="home__img" />
+                    <img
+                        src="./assets/img/home.png"
+                        alt="porsche car"
+                        class="home__img"
+                    />
 
                     <div class="home__car">
                         <!-- Car data 1 -->
@@ -112,7 +116,39 @@
             </section>
 
             <!--==================== ABOUT ====================-->
-            <section class="about section" id="about"></section>
+            <section class="about section" id="about">
+                <div class="about__container container grid">
+                    <div class="about__group">
+                        <img
+                            src="./assets/img/about.png"
+                            alt="car interior"
+                            class="about__img"
+                        />
+
+                        <div class="about__card">
+                            <h3 class="about__card-title">2.500+</h3>
+                            <p class="about__card-description">
+                                Supercharges placed along popular routes
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="about__data">
+                        <h2 class="section__title about__title">
+                            Machines With <br />
+                            Future Technology
+                        </h2>
+                        <p class="about__description">
+                            See the future with high-performance electric cars
+                            produced by renowned brands. They feature futuristic
+                            builds and designs with new and innovative platforms
+                            that last a long time.
+                        </p>
+
+                        <a href="#" class="button">Know More</a>
+                    </div>
+                </div>
+            </section>
 
             <!--==================== POPULAR ====================-->
             <section class="popular section" id="popular"></section>
@@ -149,4 +185,4 @@
     </body>
 </html>
 
-<!-- 20:40 -->
+<!-- 37:02 -->
