--- a/index.html
+++ b/index.html
@@ -151,7 +151,178 @@
             </section>
 
             <!--==================== POPULAR ====================-->
-            <section class="popular section" id="popular"></section>
+            <section class="popular section" id="popular">
+                <h2 class="section__title">
+                    Choose Your Electric Car <br />
+                    Of The Porsche Brand
+                </h2>
+
+                <div class="popular__container container">
+                    <div>
+                        <!-- Article 1 -->
+                        <article class="popular__card">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="popular__title">Porsche</h1>
+                            <h3 class="popular__subtitle">Turbo S</h3>
+
+                            <img
+                                src="./assets/img/popular1.png"
+                                alt="black porsche"
+                                class="popular__img"
+                            />
+
+                            <div class="popular__data">
+                                <div class="popular__data-group">
+                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-funds-box-line"></i> 356 Km/h
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-charging-pile-2-line"></i>
+                                    Electric
+                                </div>
+                            </div>
+
+                            <h3 class="popular__price">$175,900</h3>
+
+                            <button class="button popular__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 2 -->
+                        <article class="popular__card">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="popular__title">Porsche</h1>
+                            <h3 class="popular__subtitle">Taycan</h3>
+
+                            <img
+                                src="./assets/img/popular2.png"
+                                alt="silver porsche"
+                                class="popular__img"
+                            />
+
+                            <div class="popular__data">
+                                <div class="popular__data-group">
+                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-funds-box-line"></i> 356 Km/h
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-charging-pile-2-line"></i>
+                                    Electric
+                                </div>
+                            </div>
+
+                            <h3 class="popular__price">$114,900</h3>
+
+                            <button class="button popular__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 3 -->
+                        <article class="popular__card">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="popular__title">Porsche</h1>
+                            <h3 class="popular__subtitle">Turbo S Cross</h3>
+
+                            <img
+                                src="./assets/img/popular3.png"
+                                alt="blue porsche"
+                                class="popular__img"
+                            />
+
+                            <div class="popular__data">
+                                <div class="popular__data-group">
+                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-funds-box-line"></i> 356 Km/h
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-charging-pile-2-line"></i>
+                                    Electric
+                                </div>
+                            </div>
+
+                            <h3 class="popular__price">$150,900</h3>
+
+                            <button class="button popular__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 4 -->
+                        <article class="popular__card">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="popular__title">Porsche</h1>
+                            <h3 class="popular__subtitle">Boxster 718</h3>
+
+                            <img
+                                src="./assets/img/popular4.png"
+                                alt="black porsche"
+                                class="popular__img"
+                            />
+
+                            <div class="popular__data">
+                                <div class="popular__data-group">
+                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-funds-box-line"></i> 356 Km/h
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-charging-pile-2-line"></i>
+                                    Electric
+                                </div>
+                            </div>
+
+                            <h3 class="popular__price">$125,900</h3>
+
+                            <button class="button popular__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 5 -->
+                        <article class="popular__card">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="popular__title">Porsche</h1>
+                            <h3 class="popular__subtitle">Cayman</h3>
+
+                            <img
+                                src="./assets/img/popular5.png"
+                                alt="white porsche"
+                                class="popular__img"
+                            />
+
+                            <div class="popular__data">
+                                <div class="popular__data-group">
+                                    <i class="ri-dashboard-3-line"></i> 3.7 Sec
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-funds-box-line"></i> 356 Km/h
+                                </div>
+                                <div class="popular__data-group">
+                                    <i class="ri-charging-pile-2-line"></i>
+                                    Electric
+                                </div>
+                            </div>
+
+                            <h3 class="popular__price">$128,900</h3>
+
+                            <button class="button popular__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article End -->
+                    </div>
+                </div>
+            </section>
 
             <!--==================== FEATURES ====================-->
             <section class="features section"></section>
@@ -185,4 +356,4 @@
     </body>
 </html>
 
-<!-- 37:02 -->
+<!-- 55:22 -->
