--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         />
 
         <!--=============== SWIPER CSS ===============-->
-        <link rel="stylesheet" href="" />
+        <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
 
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -157,10 +157,10 @@
                     Of The Porsche Brand
                 </h2>
 
-                <div class="popular__container container">
-                    <div>
+                <div class="popular__container container swiper">
+                    <div class="swiper-wrapper">
                         <!-- Article 1 -->
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
                             <h1 class="popular__title">Porsche</h1>
@@ -192,7 +192,7 @@
                             </button>
                         </article>
                         <!-- Article 2 -->
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
                             <h1 class="popular__title">Porsche</h1>
@@ -224,7 +224,7 @@
                             </button>
                         </article>
                         <!-- Article 3 -->
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
                             <h1 class="popular__title">Porsche</h1>
@@ -256,7 +256,7 @@
                             </button>
                         </article>
                         <!-- Article 4 -->
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
                             <h1 class="popular__title">Porsche</h1>
@@ -288,7 +288,7 @@
                             </button>
                         </article>
                         <!-- Article 5 -->
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <div class="shape shape__smaller"></div>
 
                             <h1 class="popular__title">Porsche</h1>
@@ -321,6 +321,8 @@
                         </article>
                         <!-- Article End -->
                     </div>
+
+                    <div class="swiper-pagination"></div>
                 </div>
             </section>
 
