--- a/index.html
+++ b/index.html
@@ -327,7 +327,50 @@
             </section>
 
             <!--==================== FEATURES ====================-->
-            <section class="features section"></section>
+            <section class="features section">
+                <h2 class="section__title">More Features</h2>
+
+                <div class="features__container container grid">
+                    <div class="features__group">
+                        <img
+                            src="./assets/img/features.png"
+                            alt="car from top"
+                            class="features__img"
+                        />
+                        <!-- Features Card 1 -->
+                        <div class="features__card features__card-1">
+                            <h3 class="features__card-title">800v</h3>
+                            <p class="features__card-description">
+                                Turbo <br />
+                                Charging
+                            </p>
+                        </div>
+                        <!-- Features Card 2 -->
+                        <div class="features__card features__card-2">
+                            <h3 class="features__card-title">350</h3>
+                            <p class="features__card-description">
+                                Km <br />
+                                Range
+                            </p>
+                        </div>
+                        <!-- Features Card 3 -->
+                        <div class="features__card features__card-3">
+                            <h3 class="features__card-title">480</h3>
+                            <p class="features__card-description">
+                                Km <br />
+                                Travel
+                            </p>
+                        </div>
+                        <!-- Features Card End -->
+                    </div>
+                </div>
+
+                <img
+                    src="./assets/img/map.svg"
+                    alt="map"
+                    class="features__map"
+                />
+            </section>
 
             <!--==================== FEATURED ====================-->
             <section class="featured section" id="featured"></section>
@@ -358,4 +401,4 @@
     </body>
 </html>
 
-<!-- 55:22 -->
+<!-- 01:03:04 -->
