--- a/index.html
+++ b/index.html
@@ -373,7 +373,133 @@
             </section>
 
             <!--==================== FEATURED ====================-->
-            <section class="featured section" id="featured"></section>
+            <section class="featured section" id="featured">
+                <h2 class="section__title">Featured Luxury Cars</h2>
+
+                <div class="featured__container container">
+                    <ul class="featured__filters">
+                        <li>
+                            <button
+                                class="featured__item active-featured"
+                                data-filter="all"
+                            >
+                                <span>All</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="featured__item" data-filter=".tesla">
+                                <img
+                                    src="./assets/img/logo3.png"
+                                    alt=" car logo"
+                                />
+                            </button>
+                        </li>
+                        <li>
+                            <button class="featured__item" data-filter=".audi">
+                                <img
+                                    src="./assets/img/logo2.png"
+                                    alt=" car logo"
+                                />
+                            </button>
+                        </li>
+                        <li>
+                            <button
+                                class="featured__item"
+                                data-filter=".porsche"
+                            >
+                                <img
+                                    src="./assets/img/logo1.png"
+                                    alt=" car logo"
+                                />
+                            </button>
+                        </li>
+                    </ul>
+
+                    <div class="featured__content grid">
+                        <!-- Article 1 -->
+                        <article class="featured__card mix tesla">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="featured__title">Tesla</h1>
+                            <h3 class="featured__subtitle">Model X</h3>
+                            <img
+                                src="./assets/img/featured1.png"
+                                alt="white car"
+                                class="featured__img"
+                            />
+                            <h3 class="featured__price">$98,900</h3>
+                            <button class="button featured__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 2 -->
+                        <article class="featured__card mix tesla">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="featured__title">Tesla</h1>
+                            <h3 class="featured__subtitle">Model 3</h3>
+                            <img
+                                src="./assets/img/featured2.png"
+                                alt="red car"
+                                class="featured__img"
+                            />
+                            <h3 class="featured__price">$45,900</h3>
+                            <button class="button featured__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 3 -->
+                        <article class="featured__card mix audi">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="featured__title">Audi</h1>
+                            <h3 class="featured__subtitle">E-tron</h3>
+                            <img
+                                src="./assets/img/featured3.png"
+                                alt="black car"
+                                class="featured__img"
+                            />
+                            <h3 class="featured__price">$175,900</h3>
+                            <button class="button featured__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 4 -->
+                        <article class="featured__card mix porsche">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="featured__title">Porsche</h1>
+                            <h3 class="featured__subtitle">Boxster 987</h3>
+                            <img
+                                src="./assets/img/featured4.png"
+                                alt="blue car"
+                                class="featured__img"
+                            />
+                            <h3 class="featured__price">$126,900</h3>
+                            <button class="button featured__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article 5 -->
+                        <article class="featured__card mix porsche">
+                            <div class="shape shape__smaller"></div>
+
+                            <h1 class="featured__title">Porsche</h1>
+                            <h3 class="featured__subtitle">Panamera</h3>
+                            <img
+                                src="./assets/img/featured5.png"
+                                alt="black car"
+                                class="featured__img"
+                            />
+                            <h3 class="featured__price">$126,900</h3>
+                            <button class="button featured__button">
+                                <i class="ri-shopping-bag-2-line"></i>
+                            </button>
+                        </article>
+                        <!-- Article End -->
+                    </div>
+                </div>
+            </section>
 
             <!--==================== OFFER ====================-->
             <section class="offer section"></section>
@@ -401,4 +527,4 @@
     </body>
 </html>
 
-<!-- 01:03:04 -->
+<!-- 01:24: 30-->
