--- a/index.html
+++ b/index.html
@@ -532,7 +532,59 @@
             </section>
 
             <!--==================== LOGOS ====================-->
-            <section class="logos section"></section>
+            <section class="logos section">
+                <div class="logos__container container grid">
+                    <!-- Logos Content 1 -->
+                    <div class="logos__content">
+                        <img
+                            src="./assets/img/logo1.png"
+                            alt=""
+                            class="logos__img"
+                        />
+                    </div>
+                    <!-- Logos Content 2 -->
+                    <div class="logos__content">
+                        <img
+                            src="./assets/img/logo2.png"
+                            alt=""
+                            class="logos__img"
+                        />
+                    </div>
+                    <!-- Logos Content 3 -->
+                    <div class="logos__content">
+                        <img
+                            src="./assets/img/logo3.png"
+                            alt=""
+                            class="logos__img"
+                        />
+                    </div>
+                    <!-- Logos Content 4 -->
+                    <div class="logos__content">
+                        <img
+                            src="./assets/img/logo4.png"
+                            alt=""
+                            class="logos__img"
+                        />
+                    </div>
+                    <!-- Logos Content 5 -->
+                    <div class="logos__content">
+                        <img
+                            src="./assets/img/logo5.png"
+                            alt=""
+                            class="logos__img"
+                        />
+                    </div>
+                    <!-- Logos Content 6 -->
+                    <div class="logos__content">
+                        <img
+                            src="./assets/img/logo6.png"
+                            alt=""
+                            class="logos__img"
+                        />
+                    </div>
+                    <!-- Logos Content End -->
+                </div>
+            </section>
         </main>
 
         <!--==================== FOOTER ====================-->
