--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">Home</a>
+                            <a href="#home" class="nav__link active-link"
+                                >Home</a
+                            >
                         </li>
                         <li class="nav__item">
                             <a href="#about" class="nav__link">About</a>
@@ -588,9 +590,85 @@
         </main>
 
         <!--==================== FOOTER ====================-->
-        <footer class="footer section"></footer>
+        <footer class="footer section">
+            <div class="shape shape__big"></div>
+            <div class="shape shape__small"></div>
+
+            <div class="footer__container container grid">
+                <div class="footer__content">
+                    <a href="#" class="footer__logo">
+                        <i class="ri-steering-line"></i> Elecar
+                    </a>
+                    <p class="footer__description">
+                        We offer the best electric cars of <br />
+                        the most recognized brands in <br />
+                        the world.
+                    </p>
+                </div>
+                <!-- Footer Content 1 -->
+                <div class="footer__content">
+                    <h3 class="footer__title">Company</h3>
+
+                    <ul class="footer_links">
+                        <li>
+                            <a href="#" class="footer__link">About</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Cars</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">History</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Shop</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Footer Content 2 -->
+                <div class="footer__content">
+                    <h3 class="footer__title">Information</h3>
+
+                    <ul class="footer_links">
+                        <li>
+                            <a href="#" class="footer__link">Request a quote</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Find a dealer</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Contact us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Services</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Footer Content 3 -->
+                <div class="footer__content">
+                    <h3 class="footer__title">Follow Us</h3>
+
+                    <ul class="footer__social">
+                        <a href="#" target="_blank" class="footer__social-link">
+                            <i class="ri-facebook-fill"></i>
+                        </a>
+                        <a href="#" target="_blank" class="footer__social-link">
+                            <i class="ri-instagram-line"></i>
+                        </a>
+                        <a href="#" target="_blank" class="footer__social-link">
+                            <i class="ri-twitter-line"></i>
+                        </a>
+                    </ul>
+                </div>
+                <!-- Footer Content End -->
+            </div>
+
+            <span class="footer__copy"> &#169; All rigths reserved </span>
+        </footer>
 
         <!--========== SCROLL UP ==========-->
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line"></i>
+        </a>
 
         <!--=============== SCROLL REVEAL ===============-->
         <script src="./assets/js/scrollreveal.min.js"></script>
@@ -606,4 +684,4 @@
     </body>
 </html>
 
-<!-- 01:24: 30-->
+<!-- 01:45:48-->
